--- a/quiz.html
+++ b/quiz.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <button id="togglePanelBtn" class="toggle-btn">Show Questions</button>
-
+     
     <div class="container" id="quizContainer">
         <h2 id="question"></h2>
         <div id="answers"></div>
@@ -39,8 +39,28 @@
         <button onclick="window.location.href='dashboard.html'">Go to Home</button>
     </div>
 
-    <div id="questionPanel" class="question-panel"></div>
-
+    <div id="questionPanel" class="question-grid">
+        <button class="question-btn" style="width: 30px; height: 30px; font-size: 12px;">1</button>
+    <button class="question-btn">2</button>
+    <button class="question-btn">3</button>
+    <button class="question-btn">4</button>
+    <button class="question-btn">5</button>
+    <button class="question-btn">6</button>
+    <button class="question-btn">7</button>
+    <button class="question-btn">8</button>
+    <button class="question-btn">9</button>
+    <button class="question-btn">10</button>
+    <button class="question-btn">11</button>
+    <button class="question-btn">12</button>
+    <button class="question-btn">13</button>
+    <button class="question-btn">14</button>
+    <button class="question-btn">15</button>
+    <button class="question-btn">16</button>
+    <button class="question-btn">17</button>
+    <button class="question-btn">18</button>
+    <button class="question-btn">19</button>
+    <button class="question-btn">20</button>
+     </div>
     <script src="quiz.js"></script>
     <script src="questionpanel.js"></script> <!-- Loads after quiz.js -->
 </body>
